--- a/index.html
+++ b/index.html
@@ -7,33 +7,39 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <script src="./js/main.js"></script>
-    <form action="#" id="form" class="form">
-      <div class="form-control">
-        <label for="username">Username</label>
-        <input type="text" id="username" placeholder="Enter Username">
-        <small>Error Message</small>
-      </div>
+    <div class="container">
+      <form action="#" id="form" class="form">
+        <h2>Register with us</h2>
+        <div class="form-control">
+          <label for="username">Username</label>
+          <input type="text" id="username" placeholder="Enter Username" />
+          <small>Error Message</small>
+        </div>
 
-      <div class="form-control">
-        <label for="email">Email</label>
-        <input type="text" id="email" placeholder="Enter Email">
-        <small>Error Message</small>
-      </div>
+        <div class="form-control">
+          <label for="email">Email</label>
+          <input type="text" id="email" placeholder="Enter Email" />
+          <small>Error Message</small>
+        </div>
 
-      <div class="form-control">
-        <label for="password">password</label>
-        <input type="text" id="password" placeholder="Enter password">
-        <small>Error Message</small>
-      </div>
+        <div class="form-control">
+          <label for="password">password</label>
+          <input type="text" id="password" placeholder="Enter password" />
+          <small>Error Message</small>
+        </div>
 
-      <div class="form-control">
-        <label for="comfirm_password">Confirm Password</label>
-        <input type="text" id="comfirm_password" placeholder="Enter comfirm password">
-        <small>Error Message</small>
-      </div>
-      <button type="submit">Submit</button>
-    </form>
+        <div class="form-control">
+          <label for="comfirm_password">Confirm Password</label>
+          <input
+            type="text"
+            id="comfirm_password"
+            placeholder="Enter comfirm password"
+          />
+          <small>Error Message</small>
+        </div>
+        <button type="submit">Submit</button>
+      </form>
+    </div>
     <script src="./js/main.js"></script>
   </body>
 </html>
