Add refined logic for validations

--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
 
         <div class="form-control">
           <label for="password">password</label>
-          <input type="text" id="password" placeholder="Enter password" />
+          <input type="password" id="password" placeholder="Enter password" />
           <small>Error Message</small>
         </div>
 
         <div class="form-control">
           <label for="comfirm_password">Confirm Password</label>
           <input
-            type="text"
-            id="comfirm_password"
+            type="password"
+            id="confirm_password"
             placeholder="Enter comfirm password"
           />
           <small>Error Message</small>
