--- a/index.html
+++ b/index.html
@@ -10,30 +10,37 @@
     <div class="container">
       <form action="#" id="form" class="form">
         <h2>Register with us</h2>
+        <center><img src="./profile1.png" /></center>
         <div class="form-control">
-          <label for="username">Username</label>
+          <strong> <label for="username">Username</label></strong>
           <input type="text" id="username" placeholder="Enter Username" />
           <small>Error Message</small>
         </div>
 
         <div class="form-control">
-          <label for="email">Email</label>
-          <input type="text" id="email" placeholder="Enter Email" />
+          <strong> <label for="email">Email</label></strong>
+          <input
+            type="text"
+            id="email"
+            placeholder="Enter Email (e.g abc@gmail.com)"
+          />
           <small>Error Message</small>
         </div>
 
         <div class="form-control">
-          <label for="password">password</label>
-          <input type="password" id="password" placeholder="Enter password" />
+          <strong> <label for="password">Password</label></strong>
+          <input type="password" id="password" placeholder="Enter Password" />
           <small>Error Message</small>
         </div>
 
         <div class="form-control">
-          <label for="comfirm_password">Confirm Password</label>
+          <strong>
+            <label for="comfirm_password">Confirm Password</label></strong
+          >
           <input
             type="password"
             id="confirm_password"
-            placeholder="Enter comfirm password"
+            placeholder="Confirm your Password"
           />
           <small>Error Message</small>
         </div>
